========================
0.0.92
========================

- updated Tangular template engine
- improved routing, actions can use `-->` instead of `* -->`
- fixed parsing arrays in the `config`
- fixed FlowStream stats in `instance.newmessage()`
- updated `REQUEST()` - `timeout` is optional and may be disabled
- improved `MultipartParser`
- fixed closing proxied WebSocket in the `PROXY()` method

========================
0.0.91
========================

- added `.flow` extension for the watcher due to auto-restarting app
- added `/flowstreams/` directory for inline FlowStreams
- added FlowStream module into the core
- fixed `PATH.extensions()`
- fixed declared routes in the `NEWACTION()` method

========================
0.0.90
========================

- improved `edit` source-code functionality
	- improved schema by adding `nocompress {Boolean}` field
- fixed blacklist for localization in remote editing
- added `flow.cloning {Boolean}` for cloning of message data (default: `true`)
- added missing `headers` argument in the `res.jsonstring(data, [headers])` method
- improved code in the `U.extend_headers()` and `U.extend_headers2()` methods
- fixed setting values `0`, `false` and `null` in `FlowStreamMessage.send()` method <https://github.com/totaljs/flow/issues/108>
- extended `LOADRESOURCE()` method
	- `LOADRESOURCE(url)` for downloading multiple localizations
	- `LOADRESOURCE(name, url)` for downloading single localization
- added source map generator (only for `debug` mode)
- added `CONF.nosourcemap {Boolean}` option
- extended `U.EventEmitter2()` by adding `.off(name, [fn])` method

========================
0.0.89
========================

- extended HTTP server by adding `gzip` and `deflate` content-encoding
- updated `options` by adding `options.compress = 'gzip|deflate'` option in the `REQUEST()` method
- fixed handling values in `QueryBuilder`
- extended command-line tool by adding new command `total4 --extract <filename.bundle>`