@@ -9,6 +9,7 @@
 - updated `REQUEST()` - `timeout` is optional and may be disabled
 - improved `MultipartParser`
 - fixed closing proxied WebSocket in the `PROXY()` method
+- added `F.uibuildercompiler(opt, [callback])` method
 
 ========================
 0.0.91
